# project_konstantin

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  homewor.txt  prestart.sh  pyproject.toml  sup_script.py
config/: conf.py  settings.py
