[tool.poetry]
name = "project_konstantin"
version = "0.1.0"
description = ""
authors = ["name"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
psycopg2-binary = "2.9.9"
Django = "6.0.3"
python-dotenv = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
